fix footer 'thanks' message size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,10 @@ h4 {
   font-size: 2rem;
   font-weight: 350;
 }
+h5 {
+  font-size: 1.5rem;
+  font-weight: 320;
+}
 
 nav {
   width: 100%;
